# mavlink-router

./: Dockerfile  Dockerfile.containerize  afl.ini  entrypoint.sh  libfuzzer.ini  main.conf  main.eth.conf  main.uart.conf  meson-cross-amd64.ini  meson.build  meson_options.txt
.github/workflows/: ci_main.yaml  main.yml  tii-mavlink-router-coverity.yaml  tii-mavlink-router.yaml
conf/: default.conf  main.conf  nologging.conf
fuzz/: alog_harness.cc  binlog_harness.cc  mavlink_conf_parser_harness.cc  mavlink_parse_char_harness.cc  meson.build  ulog_harness.cc
src/: endpoint.cpp  logendpoint.cpp  logendpoint.h  mainloop.cpp  mainloop.h  meson.build  ulog.cpp  ulog.h
